src/objects/Program_Group_Term__c.object
<CustomObject>
    <description>Organizes Program Groups by Term. Used by the office of Post-Trad Admissions for goal tracking.</description>
    <fields>
        <fullName>Accepted_Goal__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <formula>Enrollment_Goal__c / Accepted_Yield_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Yield_Rate__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <label>Accepted Yield Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applied_Goal__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <formula>Enrollment_Goal__c / Applied_Yield_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_Yield_Rate__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <label>Applied Yield Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confirmed_Goal__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <formula>Enrollment_Goal__c / Confirmed_Yield_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Yield_Rate__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <label>Confirmed Yield Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enrollment_Goal__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <label>Enrollment Goal Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <formula>text( 
if( 
or(CONTAINS(Term__r.Name, &quot;Summer&quot;), CONTAINS(Term__r.Name, &quot;Fall&quot;)) , 
value( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( 
Term__r.Name, &quot;Fall &quot;, &quot;&quot;), &quot;Summer &quot;, &quot;&quot;), &quot;Spring &quot;, &quot;&quot;), &quot; - CAPS/GS&quot;, &quot;&quot;), &quot; - SEM&quot;, &quot;&quot;) 
) + 1 
, 
value( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( 
Term__r.Name, &quot;Fall &quot;, &quot;&quot;), &quot;Summer &quot;, &quot;&quot;), &quot;Spring &quot;, &quot;&quot;), &quot; - CAPS/GS&quot;, &quot;&quot;), &quot; - SEM&quot;, &quot;&quot;) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquired_Goal__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <formula>Enrollment_Goal__c / Inquired_Yield_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquired Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquired_Yield_Rate__c</fullName>
        <description>Enrollment goal data maintained by Marketing.</description>
        <label>Inquired Yield Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enrollment goal data maintained by Marketing.</description>
        <label>Program Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Group Terms</relationshipLabel>
        <relationshipName>Program_Group_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enrollment goal data maintained by Marketing.</description>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Program Group Terms</relationshipLabel>
        <relationshipName>Program_Group_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Group Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Goal__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Term__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CAPS_GS</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Goal__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>caps</value>
        </filters>
        <label>CAPS/GS</label>
    </listViews>
    <listViews>
        <fullName>SEM</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Goal__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>sem</value>
        </filters>
        <label>SEM</label>
    </listViews>
    <nameField>
        <label>Program Group Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Group Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>